2007-11-27  Satoshi Nakagawa <artension@gmail.com>

	Set break-word: break-all for urls.

2007-11-27  Satoshi Nakagawa <artension@gmail.com>

	Changed to not select a candidate while completing nicks.

2007-11-26  Satoshi Nakagawa <artension@gmail.com>

	Changed to append a space for the nickname completion when the first character is '@' and a word to complete is following it.

2007-11-26  Satoshi Nakagawa <artension@gmail.com>

	Changed the logic of the nickname completion.
	Fixed a bug, highlight events were missing.

2007-11-24  Satoshi Nakagawa <artension@gmail.com>

	Preparing for a layout change option.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Added a double click event handler on the channel list to join a selected channel.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to load and save the condition of the channel list dialog.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Added a check box on the paste sheet, use Notice command.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Added options, highlight a whole line and highlight your current nickname.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Improved sending a text message started with "/".
	Now a message started with "//" is to send a message started with "/".

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implementing the channel list dialog.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implementing the channel list dialog.
	Changed to stop printing names when the client joined a channel.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to allow IDNs.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implemented log transcripts.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed to add self and peer to the member list in a talk.

2007-11-13  Satoshi Nakagawa <artension@gmail.com>

	Enabled ruby thread hooks.

2007-11-10  Satoshi Nakagawa <artension@gmail.com>
