@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{696, 133}, {1001, 1014}}</string>
+	<string>{{709, 92}, {1101, 1086}}</string>
 </dict>
 </plist>
